--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,96 +1,140 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
-
-<!-- Page content-->
+<!-- Page content -->
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-lg-8">
-            <!-- Post content-->
-            <article>
-                <!-- Post header-->
-                <header class="mb-4">
-                    <!-- Post title-->
-                    <h1 class="fw-bolder mb-1">{{ single_blog.title }}</h1>
-                    <!-- Post meta content-->
-                    <div class="text-muted fst-italic mb-2">Posted on {{ single_blog.created_at }} by {{ single_blog.author }}</div>
-                    <!-- Post category-->
-                    <a class="badge bg-warning text-decoration-none text-light" href="#!">{{ single_blog.category }}</a>
-                </header>
-                <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded" src="{{ single_blog.featured_image.url }}" alt="..." /></figure>
-                <!-- Post content-->
-                <section class="mb-5">
-                    <p class="fs-5 mb-4">{{ single_blog.short_description }}</p>
-                    <p class="fs-5 mb-4">{{ single_blog.blog_body }}</p>
+  <div class="row">
+    <!-- Main blog content -->
+    <div class="col-lg-8">
+      <article>
+        <!-- Post header -->
+        <header class="mb-4">
+          <h1 class="fw-bolder mb-1">{{ single_blog.title }}</h1>
+          <div class="text-muted fst-italic mb-2 mr-2">
+            Posted on {{ single_blog.created_at|timesince }} by
+            {{single_blog.author }}
+          </div>
+          <a class="badge bg-warning text-decoration-none text-dark p-2" href="#!">
+            {{ single_blog.category }}
+          </a>
+        </header>
 
-                    <!-- Comments -->
-                    <h4>Comments ({{ comment_count }})</h4>
-                    {% if comments %}
-                        {% for comment in comments %}
-                            <div class="card mt-1">
-                                <div class="card-body">
-                                    <p class="card-text mb-0">{{ comment }}</p>
-                                    <span>
-                                        <small>By {{ comment.user }}</small>
-                                        <small>| {{ comment.created_at | timesince }} ago</small>
-                                    </span>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    {% else %}
-                    No comments yet.
-                    {% endif %}
-                    <br>
-                    <div class="form-group">
-                        {% if user.is_authenticated %}
-                        <form action="" method="POST">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <textarea name="comment" class="form-control" placeholder="Write your comment"></textarea>
-                                <input type="submit" value="Submit" class="btn btn-primary mt-2">
-                            </div>
+        <!-- Preview image -->
+        {% if single_blog.featured_image %}
+        <figure class="mb-4">
+          <img
+            class="img-fluid rounded"
+            src="{{ single_blog.featured_image.url }}"
+            alt="{{ single_blog.title }}"
+          />
+        </figure>
+        {% endif %}
 
-                        </form>
-                        {% else %}
-                        <p>Please <span><a href="{% url 'login' %}">login</a></span> to write a comment!</p>
-                        {% endif %}
-                    </div>
+        <!-- Post content -->
+        <section class="mb-5">
+          <p class="fs-5 mb-4">{{ single_blog.short_description }}</p>
+          <p class="fs-5 mb-4">{{ single_blog.blog_body|linebreaks }}</p>
 
-                </section>
-            </article>
-        </div>
-        <!-- Side widgets-->
-        <div class="col-lg-4">
-            
-            <!-- Categories widget-->
-            <div class="card mb-4 p-3">
-                <h4 class="font-italic">Categories</h4>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                {% for cat in categories %}
-                                <li><a href="{% url 'posts_by_category' cat.id %}">{{ cat.category_name }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+          <!-- Comments -->
+          <h4 class="mt-5">Comments ({{ comment_count }})</h4>
+          {% if comments %} {% for comment in comments %}
+          <div class="card mt-2 mr-2 border-1 shadow-lg rounded">
+            <div class="card-body">
+              <p class="card-text mb-2 mr-2">{{ comment }}</p>
+              <small class="text-muted">
+                By <strong>{{ comment.user }}</strong> •
+                {{comment.created_at|timesince }}
+              </small>
             </div>
-            <!-- Side widget-->
-            {% if social_links %}
-            <div class="card mb-4 p-3">
-                <h4 class="font-italic">Follow Us</h4>
-                <ol class="list-unstyled">
-                    {% for i in social_links %}
-                    <li><a href="{{ i.link }}" target="_blank">{{ i.platform }}</a></li>
-                    {% endfor %}
-                </ol>
-            </div>
+          </div>
+          {% endfor %} {% else %}
+          <p class="mt-2 mr-2 text-muted">No comments yet.</p>
+          {% endif %}
+
+          <!-- Comment form -->
+          <div class="mt-4">
+            {% if user.is_authenticated %}
+            <form action="" method="POST">
+              {% csrf_token %}
+              <div class="form-group">
+                <textarea
+                  name="comment"
+                  class="form-control"
+                  rows="3"
+                  placeholder="Write your comment..."
+                  required
+                ></textarea>
+                <input
+                  type="submit"
+                  value="Submit"
+                  class="btn btn-warning mt-2 mr-2"
+                />
+              </div>
+            </form>
+            {% else %}
+            <p class="mt-3">
+              Please
+              <a href="{% url 'login' %}" class="text-decoration-none">login</a>
+              to write a comment!
+            </p>
             {% endif %}
-        </div>
+          </div>
+        </section>
+      </article>
     </div>
+
+    <!-- Sidebar -->
+    <div class="col-lg-4">
+      <!-- Categories widget -->
+      <div class="card mb-4 p-3 border-1 shadow-lg">
+        <h4 class="mb-3">Categories</h4>
+        <ul class="list-unstyled mb-0">
+          {% for cat in categories %}
+          <li class="mb-1">
+            <a
+              href="{% url 'posts_by_category' cat.id %}"
+              class="text-decoration-none text-dark"
+            >
+              {{ cat.category_name }}
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+
+      <!-- Social links widget -->
+      {% if social_links %}
+      <div class="card p-3 border-1 shadow-lg">
+        <h4 class="mb-3">Follow Us</h4>
+        <div class="d-flex align-items-center">
+          {% for i in social_links %}
+          <a
+            href="{{ i.link }}"
+            target="_blank"
+            class="text-dark d-flex align-items-center text-decoration-none mx-2"
+            title="{{ i.platform }}"
+          >
+            {% if "facebook" in i.platform|lower %}
+            <i class="fa fa-facebook-square me-2 mr-2"></i> Facebook 
+            {% elif "twitter" in i.platform|lower %}
+            <i class="fa fa-twitter-square me-2 mr-2"></i> Twitter 
+            {% elif "instagram" in i.platform|lower %}
+            <i class="fa fa-instagram me-2 mr-2"></i> Instagram 
+            {% elif "linkedin" in i.platform|lower %}
+            <i class="fa fa-linkedin-square me-2 mr-2"></i> LinkedIn 
+            {% elif "youtube" in i.platform|lower %}
+            <i class="fa fa-youtube-play me-2 mr-2"></i> YouTube 
+            {% elif "github" in i.platform|lower %} 
+            <i class="fa fa-github me-2 mr-2"></i> GitHub 
+            {% else %} 
+            <i class="fa fa-globe me-2 mr-2"></i> Website 
+            {% endif %}
+          </a>
+          {% endfor %}
+        </div>
+      </div>
+      {% endif %}
+    </div>
+  </div>
 </div>
 
 {% endblock %}
